--- a/gettext-tools/tests/ChangeLog
+++ b/gettext-tools/tests/ChangeLog
@@ -1,3 +1,9 @@
+2013-08-06  Daiki Ueno  <ueno@gnu.org>
+
+	xgettext: add support for GSettings schema file
+	* Makefile.am (TESTS): Add xgettext-gsettings-1.
+	* xgettext-gsettings-1: New file.
+
 2013-07-25  Daiki Ueno  <ueno@gnu.org>
 
 	tests: allow each test to run individually without 'make'
