--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2013-08-07  Daiki Ueno  <ueno@gnu.org>
+
+	* NEWS: Add entry for 0.18.4.  Mention GSettings schema file support.
+
 2013-07-10  Daiki Ueno  <ueno@gnu.org>
 
 	gettext-tools: convert tests to use init.sh from Gnulib
