Fix copyright year in xgettext version string.

--- a/gettext-tools/src/ChangeLog
+++ b/gettext-tools/src/ChangeLog
@@ -5,6 +5,11 @@
 	Reported by Gabor Kelemen in
 	<http://lists.gnu.org/archive/html/bug-gettext/2013-08/msg00026.html>.
 
+2013-08-08  Miguel Angel Arruga Vivas  <rosen644835@gmail.com> (tiny change)
+
+	Fix copyright year in xgettext version string.
+	* xgettext.c (main): Update copyright year.
+
 2013-07-11  Daiki Ueno  <ueno@gnu.org>
 
 	Fix crash when parsing '..' with non-string argument.
