--- a/gettext-tools/src/ChangeLog
+++ b/gettext-tools/src/ChangeLog
@@ -1,3 +1,10 @@
+2013-08-12  Daiki Ueno  <ueno@gnu.org>
+
+	* xgettext.c (remember_a_message): Handle multi-line extracted
+	comments.
+	Reported by Gabor Kelemen in
+	<http://lists.gnu.org/archive/html/bug-gettext/2013-08/msg00026.html>.
+
 2013-07-11  Daiki Ueno  <ueno@gnu.org>
 
 	Fix crash when parsing '..' with non-string argument.
