--- a/gettext-tools/misc/ChangeLog
+++ b/gettext-tools/misc/ChangeLog
@@ -1,3 +1,12 @@
+2013-08-12  Daiki Ueno  <ueno@gnu.org>
+
+	autopoint: make macro trace in autom4te robuster
+	* autopoint.in (func_trace): Ignore M4sugar macros which may abort
+	autom4te and read gettext.m4 to trace AM_GNU_GETTEXT_* macros.
+	* gettextize.in (func_trace): New function ported from autopoint.in.
+	Reported by Sami Kerola in
+	<https://lists.gnu.org/archive/html/bug-gettext/2013-07/msg00002.html>.
+
 2013-07-29  Jan Djärv  <jan.h.d@swipnet.se>  (tiny change)
 
 	* po-mode.el (po-send-mail): Don't include original uncompressed
