--- a/gettext-tools/src/ChangeLog
+++ b/gettext-tools/src/ChangeLog
@@ -1,5 +1,11 @@
 2013-11-14  Daiki Ueno  <ueno@gnu.org>
 
+	* x-javascript.c (phase3_getc): Make sure to call comment_line_end
+	after parsing C++ style comment line.
+	Reported by Illimar Tambek at: <http://savannah.gnu.org/bugs/?40572>.
+
+2013-11-14  Daiki Ueno  <ueno@gnu.org>
+
 	* x-javascript.c (comment_line_end): Add missing chars_to_remove
 	argument; all callers changed.
 	Reported by Illimar Tambek at: <http://savannah.gnu.org/bugs/?40573>.
