--- a/gettext-tools/misc/ChangeLog
+++ b/gettext-tools/misc/ChangeLog
@@ -1,3 +1,11 @@
+2013-12-05  Daiki Ueno  <ueno@gnu.org>
+
+	* autopoint.in (func_trace): Allow user to specify autom4te
+	executable name through $AUTOM4TE envvar.
+	* gettextize.in (func_trace): Likewise.
+	Suggested by Eric Blake at
+	<https://lists.gnu.org/archive/html/bug-gettext/2013-12/msg00006.html>.
+
 2013-11-19  Daiki Ueno  <ueno@gnu.org>
 
 	* autopoint.in (func_trace): Disable m4_include and m4_esyscmd.
