--- a/gettext-tools/doc/ChangeLog
+++ b/gettext-tools/doc/ChangeLog
@@ -1,3 +1,9 @@
+2013-12-17  Daiki Ueno  <ueno@gnu.org>
+
+	* gettext.texi (Installers): Fix wording.
+	Reported by Reuben Thomas in:
+	<https://lists.gnu.org/archive/html/bug-gettext/2013-12/msg00009.html>.
+
 2013-08-06  Daiki Ueno  <ueno@gnu.org>
 
 	xgettext: add support for GSettings schema file
