--- a/gettext-tools/doc/ChangeLog
+++ b/gettext-tools/doc/ChangeLog
@@ -1,3 +1,7 @@
+2014-01-12  Benno Schulenberg <bensberg@justemail.net>  (tiny change)
+
+	* gettext.texi (c-format Flag): Wording fixes.
+
 2013-12-17  Daiki Ueno  <ueno@gnu.org>
 
 	* gettext.texi (Installers): Fix wording.
