tests: fix "make check" under VPATH builds
Previously, we generated init.cfg in $builddir, while tests/init.sh
reads its configuration file (init.cfg) from $srcdir.  This patch
moves the auto-generated part into a separate file
($builddir/init-env) and read the file from $srcdir/init.cfg.

--- a/gettext-tools/tests/ChangeLog
+++ b/gettext-tools/tests/ChangeLog
@@ -1,5 +1,14 @@
 2014-01-28  Roumen Petrov <bugtrack@roumenpetrov.info>  (tiny change)
 
+	tests: fix "make check" under VPATH builds
+	Reported at:
+	<https://lists.gnu.org/archive/html/bug-gettext/2014-01/msg00012.html>.
+	* init-env: New file renamed from init.cfg.in.
+	* init.cfg.in: Remove.
+	* init.cfg: Read $builddir/init-env.
+
+2014-01-28  Roumen Petrov <bugtrack@roumenpetrov.info>  (tiny change)
+
 	Support configuration with absolute path.
 	Reported at:
 	<https://lists.gnu.org/archive/html/bug-gettext/2014-01/msg00011.html>.
