--- a/gettext-tools/ChangeLog
+++ b/gettext-tools/ChangeLog
@@ -1,3 +1,10 @@
+2014-01-28  Roumen Petrov <bugtrack@roumenpetrov.info>  (tiny change)
+
+	tests: fix "make check" under VPATH builds
+	Reported at:
+	<https://lists.gnu.org/archive/html/bug-gettext/2014-01/msg00012.html>.
+	* configure.ac: Output init-env instead of init.cfg.
+
 2013-07-25  Daiki Ueno  <ueno@gnu.org>
 
 	tests: allow each test to run individually without 'make'
