--- a/gettext-tools/tests/ChangeLog
+++ b/gettext-tools/tests/ChangeLog
@@ -1,3 +1,12 @@
+2014-02-03  Roumen Petrov <bugtrack@roumenpetrov.info>  (tiny change)
+
+	tests: pass required --tag=XX to libtool
+	Reported at:
+	<https://lists.gnu.org/archive/html/bug-gettext/2014-02/msg00001.html>.
+	* lang-c: Pass --tag=CC to libtool.
+	* lang-objc: Likewise.
+	* lang-c++: Pass --tag=CXX to libtool.
+
 2014-01-28  Roumen Petrov <bugtrack@roumenpetrov.info>  (tiny change)
 
 	tests: fix "make check" under VPATH builds
