--- a/gettext-tools/doc/ChangeLog
+++ b/gettext-tools/doc/ChangeLog
@@ -1,3 +1,13 @@
+2014-02-10  Daiki Ueno  <ueno@gnu.org>
+
+	* ISO_3166: Remove AN, add BL, BQ, CW, MF, SS, and SX.  Update
+	country code for AG, AS, BA, BN, BO, CD, CG, FK, FM, FO, GB, GS,
+	HM, IR, KN, KP, KR, LA, LC, MD, MK, MM, PM, PS, RU, SH, SJ, ST,
+	SY, TC, TF, TT, TW, TZ, UM, VA, VC, VE, VG, VI, VN, WF, and WS.
+	* iso-3166.texi: Regenerate.
+	Reported by Karl Berry in:
+	<https://lists.gnu.org/archive/html/bug-gettext/2014-02/msg00006.html>.
+
 2014-01-12  Benno Schulenberg <bensberg@justemail.net>  (tiny change)
 
 	* gettext.texi (c-format Flag): Wording fixes.
