--- a/gettext-tools/doc/ChangeLog
+++ b/gettext-tools/doc/ChangeLog
@@ -1,3 +1,11 @@
+2014-03-15  Daiki Ueno  <ueno@gnu.org>
+
+	* FAQ.html: Point to bug-gettext@gnu.org rather than
+	bug-gnu-gettext@gnu.org, in the context of mailing list; add a
+	link to the mailing list information page.  Replace the reference
+	of "Free Translation Project" with "Translation Project".
+	Reported by Benno Schulenberg.
+
 2014-02-10  Daiki Ueno  <ueno@gnu.org>
 
 	* ISO_3166: Remove AN, add BL, BQ, CW, MF, SS, and SX.  Update
