--- a/gettext-tools/doc/ChangeLog
+++ b/gettext-tools/doc/ChangeLog
@@ -1,3 +1,7 @@
+2014-03-26  Aurélien Gâteau <mail@agateau.com>  (tiny change)
+
+	* msgfmt.texi: Document --source option.
+
 2014-03-25  Daiki Ueno  <ueno@gnu.org>
 
 	* msgattrib.texi: Document the optional argument of
