Extend --add-location option to suppress line number output
The --add-location option of msgattrib, msgcat, msgcomm, msgconv,
msgen, msgfilter, msggrep, msgmerge, msguniq, and xgettext
commands now takes an optional argument 'never', 'full', or
'file', to control the format of "#: ..."  comments.

The default catalog reader changed to always remember file
positions so the line number part can be suppressed in output
phase rather than input phase.

--- a/gettext-tools/doc/ChangeLog
+++ b/gettext-tools/doc/ChangeLog
@@ -1,3 +1,17 @@
+2014-03-25  Daiki Ueno  <ueno@gnu.org>
+
+	* msgattrib.texi: Document the optional argument of
+	--add-location.
+	* msgcat.texi: Likewise.
+	* msgcomm.texi: Likewise.
+	* msgconv.texi: Likewise.
+	* msgen.texi: Likewise.
+	* msgfilter.texi: Likewise.
+	* msggrep.texi: Likewise.
+	* msgmerge.texi: Likewise.
+	* msguniq.texi: Likewise.
+	* xgettext.texi: Likewise.
+
 2014-03-15  Daiki Ueno  <ueno@gnu.org>
 
 	* FAQ.html: Point to bug-gettext@gnu.org rather than
