--- a/gettext-tools/doc/msgfilter.texi
+++ b/gettext-tools/doc/msgfilter.texi
@@ -172,9 +172,16 @@ filtering like any other message.
 @opindex --no-location@r{, @code{msgfilter} option}
 Do not write @samp{#: @var{filename}:@var{line}} lines.
 
-@item --add-location
+@item -n
+@itemx --add-location=@var{type}
 @opindex --add-location@r{, @code{msgfilter} option}
 Generate @samp{#: @var{filename}:@var{line}} lines (default).
+
+The optional @var{type} can be either @samp{full}, @samp{file}, or
+@samp{never}.  If it is not given or @samp{full}, it generates the
+lines with both file name and line number.  If it is @samp{file}, the
+line number part is omitted.  If it is @samp{never}, it completely
+suppresses the lines (same as @code{--no-location}).
 
 @item --strict
 @opindex --strict@r{, @code{msgfilter} option}
