--- a/gettext-tools/doc/xgettext.texi
+++ b/gettext-tools/doc/xgettext.texi
@@ -395,10 +395,16 @@ this option makes it harder for technically skilled translators to understand
 each message's context.
 
 @item -n
-@itemx --add-location
+@itemx --add-location=@var{type}
 @opindex -n@r{, @code{xgettext} option}
 @opindex --add-location@r{, @code{xgettext} option}
 Generate @samp{#: @var{filename}:@var{line}} lines (default).
+
+The optional @var{type} can be either @samp{full}, @samp{file}, or
+@samp{never}.  If it is not given or @samp{full}, it generates the
+lines with both file name and line number.  If it is @samp{file}, the
+line number part is omitted.  If it is @samp{never}, it completely
+suppresses the lines (same as @code{--no-location}).
 
 @item --strict
 @opindex --strict@r{, @code{xgettext} option}
