--- a/gettext-tools/src/ChangeLog
+++ b/gettext-tools/src/ChangeLog
@@ -1,3 +1,45 @@
+2014-03-25  Daiki Ueno  <ueno@gnu.org>
+
+	Extend --add-location option to suppress line number output
+	The --add-location option of msgattrib, msgcat, msgcomm, msgconv,
+	msgen, msgfilter, msggrep, msgmerge, msguniq, and xgettext
+	commands now got new semantics.  It takes an optional argument
+	'never', 'full', or 'file', to control the format of "#: ..."
+	comments.
+	The default catalog reader changed to always remember file
+	positions so the line number part can be suppressed in output
+	phase rather than input phase.
+	Feature requested in:
+	<https://lists.gnu.org/archive/html/bug-gettext/2013-08/msg00039.html>.
+	* read-catalog.h (line_comment): Abolish.
+	(DEFAULT_CATALOG_READER_TY): Remove handle_filepos_comments field.
+	* read-catalog.c (line_comment): Abolish.
+	(default_destructor, default_copy_comment_state)
+	(default_reset_comment_state, default_comment_filepos): Always
+	remember filepos.
+	(default_parse_brief, read_catalog_stream): Adjust to the change.
+	* write-po.h (enum filepos_comment_type): New enum.
+	(message_print_style_filepos): New function declaration.
+	(handle_filepos_comment_option): New function declaration.
+	* write-po.c (message_print_style_filepos): New function
+	(handle_filepos_comment_option): New function.
+	(message_print_comment_filepos): Uniquify mp->filepos elements
+	ignoring line number if filepos_comment_type is
+	filepos_comment_file.
+	* msgfmt.c: Adjust to the change.
+	* msgattrib.c (long_options, main): Allow --add-location option to
+	take an optional format specifier.
+	* msgcat.c (long_options, main): Likewise.
+	* msgcomm.c (long_options, main): Likewise.
+	* msguniq.c (long_options, main): Likewise.
+	* xgettext.c (long_options, main): Likewise.
+	* msgconv.c (long_options, main): Likewise; add a new option -n as
+	an alias of --add-location.
+	* msgen.c (long_options, main): Likewise.
+	* msgfilter.c (long_options, main): Likewise.
+	* msggrep.c (long_options, main): Likewise.
+	* msgmerge.c (long_options, main): Likewise.
+
 2014-03-12  Daiki Ueno  <ueno@gnu.org>
 
 	xgettext: Fix infloop on loading Glade files with non-DL expat
