--- a/NEWS
+++ b/NEWS
@@ -6,6 +6,17 @@ Version 0.18.4 - unreleased
     xgettext now supports GSettings schema file format used by GNOME
     applications.
 
+  - JavaScript:
+    xgettext now recognizes E4X (ECMA-357) constructs.
+
+  - PHP:
+    Single and double quotes around heredoc markers are now recognized.
+
+* The --add-location option of msgattrib, msgcat, msgcomm, msgconv,
+  msgen, msgfilter, msggrep, msgmerge, msguniq, and xgettext commands
+  now takes an optional argument 'never', 'full', or 'file', to
+  control the format of "#: ..." comments.
+
 * libgettextpo library:
   - Memory leak fixes in the PO file parser.
 
