--- a/NEWS
+++ b/NEWS
@@ -17,6 +17,9 @@ Version 0.18.4 - unreleased
   now takes an optional argument 'never', 'full', or 'file', to
   control the format of "#: ..." comments.
 
+* msgfmt now has --source option to keep generated .java file when
+  running in Java mode.
+
 * libgettextpo library:
   - Memory leak fixes in the PO file parser.
 
