--- a/gettext-tools/tests/ChangeLog
+++ b/gettext-tools/tests/ChangeLog
@@ -1,3 +1,11 @@
+2014-03-26  Daiki Ueno  <ueno@gnu.org>
+
+	tests: Add tests for autopoint
+	* autopoint-1: New file.
+	* autopoint-2: New file.
+	* autopoint-3: New file.
+	* Makefile.am (TESTS): Add new tests.
+
 2014-03-25  Daiki Ueno  <ueno@gnu.org>
 
 	Add tests for --add-location=file option.
