autopoint: Add license notice to po/Rules-quot

--- a/gettext-runtime/po/ChangeLog
+++ b/gettext-runtime/po/ChangeLog
@@ -1,3 +1,7 @@
+2014-04-02  Daiki Ueno  <ueno@gnu.org>
+
+	* Rules-quot: Add a license notice.
+
 2013-07-07  Daiki Ueno  <ueno@gnu.org>
 
 	* cs.po: Update from Marek Černocký <marek@manet.cz>.
