--- a/gettext-tools/tests/ChangeLog
+++ b/gettext-tools/tests/ChangeLog
@@ -1,3 +1,16 @@
+2014-04-04  Daiki Ueno  <ueno@gnu.org>
+
+	tests: Add tests for msgfmt --desktop
+	* msgfmt-desktop-1: New file.
+	* msgfmt-desktop-2: New file.
+	* Makefile.am (TESTS): Add new tests.
+
+2014-04-04  Daiki Ueno  <ueno@gnu.org>
+
+	tests: Add tests for xgettext Desktop Entry support
+	* xgettext-desktop-1: New file.
+	* Makefile.am (TESTS): Add new tests.
+
 2014-03-27  Daiki Ueno  <ueno@gnu.org>
 
 	* autopoint-2: Check for the case when multiple arguments are
