--- a/gnulib-local/ChangeLog
+++ b/gnulib-local/ChangeLog
@@ -1,3 +1,8 @@
+2014-04-07  Daiki Ueno  <ueno@gnu.org>
+
+	Update after gnulib changed.
+	* lib/obstack.h.diff: Update.
+
 2013-08-07  Daiki Ueno  <ueno@gnu.org>
 
 	Update after gnulib changed.
