--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2014-04-07  Daiki Ueno  <ueno@gnu.org>
+
+	* autogen.sh: Error out when gnulib-tool exit with non-zero.
+
 2013-12-17  Daiki Ueno  <ueno@gnu.org>
 
 	Add missing extern-inline.m4 into archive.
