--- a/gettext-tools/tests/ChangeLog
+++ b/gettext-tools/tests/ChangeLog
@@ -1,3 +1,9 @@
+2014-05-10  Guido Flohr  <guido@imperia.net>
+
+	msgattrib: Add --empty option to clear msgstr
+	* msgattrib-19: New test.
+	* Makefile.am (TESTS): Add new test.
+
 2014-05-09  Daiki Ueno  <ueno@gnu.org>
 
 	vala: Interpret string literals lazily
