--- a/gettext-tools/examples/hello-c-gnome3/INSTALL
+++ b/gettext-tools/examples/hello-c-gnome3/INSTALL
@@ -1,10 +1,6 @@
 This example relies on:
-  - the GNOME libraries (libgnomeui, libgnome, libgnomesupport, libart_lgpl)
-    and their dependencies: imlib (libgdk_imlib), audiofile (libaudiofile),
-    esound (libesd), zlib (libz).
-  - the GTK libraries (libgtk, libgdk)
-  - the glib libraries (libglib, libgmodule)
-  - the X11 libraries
+  - the GTK libraries (libgtk, libgdk), version 3.10 or later
+  - the glib libraries (libglib)
 
 Installation:
   ./autogen.sh
