--- a/gettext-tools/src/ChangeLog
+++ b/gettext-tools/src/ChangeLog
@@ -1,3 +1,8 @@
+2014-04-17  Daiki Ueno  <ueno@gnu.org>
+
+	xgettext: Strip multiple ".in" suffixes from the file name.
+	* xgettext.c (main): Strip multiple ".in" suffixes.
+
 2014-04-16  Daiki Ueno  <ueno@gnu.org>
 
 	* msgfmt.c (get_languages): Allow any whitespace character as a
